--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint ."
+    "format": "prettier --write --log-level warn './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
+    "lint": "eslint . --fix",
+    "test": "echo \"Skipping tests ...\" && exit 0"
   },
   "dependencies": {
     "next": "16.1.1",
@@ -14,6 +16,8 @@
     "react-dom": "19.2.3"
   },
   "devDependencies": {
+    "@commitlint/cli": "^20.3.1",
+    "@commitlint/config-conventional": "^20.3.1",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
@@ -22,9 +26,27 @@
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
     "eslint-plugin-prettier": "^5.5.4",
+    "lint-staged": "^16.2.7",
     "prettier": "^3.7.4",
     "prettier-plugin-tailwindcss": "^0.7.2",
+    "simple-git-hooks": "^2.13.1",
     "tailwindcss": "^4",
     "typescript": "^5"
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
+  },
+  "simple-git-hooks": {
+    "commit-msg": "pnpm dlx commitlint --edit $1",
+    "pre-commit": "pnpm lint-staged",
+    "pre-push": "pnpm lint && pnpm build && pnpm test"
+  },
+  "lint-staged": {
+    "**/*.{js,mjs,ts,tsx}": [
+      "prettier --write",
+      "eslint --fix"
+    ]
   }
 }
