feat: add email/password auth

--- a/components.json
+++ b/components.json
@@ -18,5 +18,7 @@
     "lib": "@/lib",
     "hooks": "@/lib/hooks"
   },
-  "registries": {}
+  "registries": {
+    "@supabase": "https://supabase.com/ui/r/{name}.json"
+  }
 }
