--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "format": "prettier --write --log-level warn './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
     "lint": "eslint . --fix",
-    "test": "echo \"Skipping tests ...\" && exit 0",
+    "test": "vitest",
     "db:reset": "pnpm dlx supabase db reset && pnpm db:gen:types",
     "db:gen:types": "pnpm dlx supabase gen types typescript --local > src/lib/database.types.ts"
   },
@@ -47,12 +47,14 @@
     "eslint-config-next": "16.1.1",
     "eslint-plugin-prettier": "^5.5.4",
     "lint-staged": "^16.2.7",
+    "next-test-api-route-handler": "^5.0.3",
     "prettier": "^3.7.4",
     "prettier-plugin-tailwindcss": "^0.7.2",
     "simple-git-hooks": "^2.13.1",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^4.0.16"
   },
   "commitlint": {
     "extends": [
