--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "format": "prettier --write --log-level warn './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
     "lint": "eslint . --fix",
     "test": "vitest",
+    "cypress:run": "cypress run",
+    "cypress:open": "cypress open",
+    "e2e": "start-server-and-test dev http://localhost:3000 cypress:run",
+    "e2e:open": "start-server-and-test dev http://localhost:3000 cypress:open",
     "db:reset": "pnpm dlx supabase db reset && pnpm db:gen:types",
     "db:gen:types": "pnpm dlx supabase gen types typescript --local > src/lib/database.types.ts"
   },
@@ -43,6 +47,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
+    "cypress": "^15.8.2",
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
     "eslint-plugin-prettier": "^5.5.4",
@@ -51,6 +56,7 @@
     "prettier": "^3.7.4",
     "prettier-plugin-tailwindcss": "^0.7.2",
     "simple-git-hooks": "^2.13.1",
+    "start-server-and-test": "^2.1.3",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5",
