chore: add msw, jsdom, @testing-library/react deps

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@commitlint/cli": "^20.3.1",
     "@commitlint/config-conventional": "^20.3.1",
     "@tailwindcss/postcss": "^4",
+    "@testing-library/react": "^16.3.1",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -53,7 +54,9 @@
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
     "eslint-plugin-prettier": "^5.5.4",
+    "jsdom": "^27.4.0",
     "lint-staged": "^16.2.7",
+    "msw": "^2.12.7",
     "next-test-api-route-handler": "^5.0.3",
     "prettier": "^3.7.4",
     "prettier-plugin-tailwindcss": "^0.7.2",
