--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,9 @@
-NEXT_PUBLIC_SUPABASE_URL=
-NEXT_PUBLIC_SUPABASE_PUBLISHABLE_KEY=
+# Supabase Configuration
+# Get these from: https://supabase.com/dashboard/project/_/settings/api
+
+NEXT_PUBLIC_SUPABASE_URL=https://your-project-id.supabase.co
+NEXT_PUBLIC_SUPABASE_PUBLISHABLE_KEY=your-anon-key
+
+# Note: SUPABASE_SERVICE_ROLE_KEY is intentionally NOT used in this project
+# to avoid any risk of client-side exposure. All data access uses RLS policies
+# with the authenticated user's session.
